--- a/static/css/donation_page.css
+++ b/static/css/donation_page.css
@@ -1,8 +1,29 @@
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff; /* Set background color */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.preloader img {
+  width: 500px;
+  height: auto;
+}
+@media screen and (max-width: 484px) {
+  .preloader img {
+    width: 200px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
-
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
@@ -11,35 +32,29 @@ body {
 }
 .header {
   text-align: center;
-  padding: 2rem;
-  background-color: #007b5e;
   color: #fff;
 }
-
 .header .logo {
-  width: 120px;
-  margin-bottom: 1rem;
+  width: 300px;
+  margin-bottom: -5rem;
+  margin-top: -1rem;
 }
-
 .main-content {
   padding: 2rem;
 }
-
 .donation-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: #fff;
   padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 0px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
 .donation-section .content {
   text-align: center;
   margin-bottom: 1.5rem;
 }
-
 .donation-section .donation-form {
   width: 100%;
   max-width: 500px;
@@ -47,53 +62,24 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
-
 .input-field {
   padding: 0.8rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
 }
-
 .payment-button {
   padding: 0.8rem;
-  background: #007b5e;
+  /* background: #007b5e; */
+  background-color: #28a745;
   color: #fff;
   font-size: 1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: bold;
 }
-
 .payment-button:hover {
-  background: #005946;
-}
-
-.footer {
-  background: #333;
-  color: #fff;
-  padding: 2rem;
-  text-align: center;
-}
-
-.footer-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-
-.footer a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-}
-
-.footer-social .social-icon {
-  margin: 0 0.5rem;
-  font-size: 1.5rem;
-  color: #fff;
+  /* background: #005946; */
+  background-color: #218838;
 }
